--- a/index.html
+++ b/index.html
@@ -17,10 +17,22 @@
         <input class="campo" type="text" name="duration" id="duration" placeholder="Life range"><br><br>
     </form>
 
-        <button type="button" onclick="getProducts()">Charge plants</button>
+        <button type="button" onclick="getProducts()">Add plant</button>
     </section>
-    <button type="button" onclick="getProducts()">Charge plants</button>
-    </section>
+    <table class="table">
+        <tr>
+            <th>Name</th>
+            <th>Biome</th>
+            <th>Life range</th>
+            <th>ID</th>
+        </tr>
+        <tr>
+            <td>Planta</td>
+            <td>Pradera</td>
+            <td>7 años</td>
+            <td>26c</td>
+        </tr>
+    </table>
     <script src="./src/main.js"></script>
 </body>
 </html>
