--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="text" id="plantName" placeholder="Plant name" required>
             <input type="text" id="plantBiome" placeholder="Plant biome" required>
             <input type="number" id="plantDuration" placeholder="Plant duration" required>
-            <button type="submit">Add plant</button>
+            <button type="submit" onclick="printPlants()">Add plant</button>
           </form>
 
         
@@ -23,6 +23,7 @@
             <th>Name</th>
             <th>Biome</th>
             <th>Life range</th>
+            <th>Accion</th>
         </tr>
     </table>
     <script src="./src/main.js"></script>
