--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input class="campo" type="text" name="duration" id="duration" placeholder="Life range"><br><br>
     </form>
 
-        <button type="button" onclick="getProducts()">Add plant</button>
+        <button type="button" onclick="getProducts()" class="button">Add plant</button>
     </section>
     <table class="table">
         <tr>
