--- a/index.html
+++ b/index.html
@@ -7,24 +7,27 @@
     <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
-    <section class="plantsList">
+    <section class="plantsList" id="plantsList">
         <h3><u>Plants list</u></h3>
         <form id="plantForm">
             <input type="text" id="plantName" placeholder="Plant name" required>
             <input type="text" id="plantBiome" placeholder="Plant biome" required>
             <input type="number" id="plantDuration" placeholder="Plant duration" required>
-            <button type="submit" onclick="printPlants()">Add plant</button>
+            <button type="submit" onclick="">Add plant</button>
           </form>
 
         
     </section>
     <table class="table">
-        <tr>
-            <th>Name</th>
-            <th>Biome</th>
-            <th>Life range</th>
-            <th>Accion</th>
-        </tr>
+        <thead>
+            <tr>
+              <th>Name</th>
+              <th>Biome</th>
+              <th>Life range</th>
+              <th>Accion</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
     </table>
     <script src="./src/main.js"></script>
 </body>
