--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="plantsList" id="plantsList">
-        <h3><u>Plants list</u></h3>
+        <h3><u>The Garden</u></h3>
         <form id="plantForm">
             <input type="text" id="plantName" placeholder="Plant name" required>
             <input type="text" id="plantBiome" placeholder="Plant biome" required>
@@ -24,7 +24,7 @@
               <th>Name</th>
               <th>Biome</th>
               <th>Life range</th>
-              <th>Accion</th>
+              <th>Actions</th>
             </tr>
           </thead>
           <tbody></tbody>
