--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <section class="plantsList" id="plantsList">
         <h3><u>The Garden</u></h3>
         <form id="plantForm">
-            <input type="text" id="plantName" placeholder="Plant name" required>
+            <input type="text" id="plantName" placeholder="Plant name" value="" required>
+
             <input type="text" id="plantBiome" placeholder="Plant biome" required>
+
             <input type="number" id="plantDuration" placeholder="Plant duration" required>
-            <button type="submit" onclick="">Add plant</button>
+
+            <button type="submit" onclick="return validar()">Add plant</button>
           </form>
 
         
